@@ -1,3 +1,10 @@
+2002-08-19  Darin Adler  <darin@apple.com>
+
+	Fixed tab cycle on slashdot.org and elsewhere by being stricter about what is
+	included in the tab cycle.
+
+        * kwq/KWQWidget.mm: (QWidget::focusPolicy): Use the same rule as AppKit.
+
 2002-08-19  David Hyatt  <hyatt@apple.com>
 
 	Tweak baselines to look a little better for form controls.
